# xgecu-t48.debian.gui

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
debian/: changelog  control  copyright  rules  xgecu-gui.postinst  xgecu-gui.postrm
docs/: USAGE.md
packaging/: xgecu-gui.desktop
scripts/: merge_chip_lists.py
src/: main.cpp
src/core/: BufferModel.cpp  BufferModel.h  ChipDatabase.cpp  ChipDatabase.h  Programmer.cpp  Programmer.h  ProgrammerWorker.cpp  ProgrammerWorker.h
src/ui/: ChipSelectDialog.cpp  ChipSelectDialog.h  FuseEditorWidget.cpp  FuseEditorWidget.h  HexView.cpp  HexView.h  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  Theme.h  ThemeManager.cpp  ThemeManager.h  ZifSocketView.cpp  ZifSocketView.h
tests/: CMakeLists.txt  test_buffer_model.cpp  test_chip_database.cpp
tests/live/: test_live_programmer.cpp
